# bazel-test-output-parser

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Cargo.toml  LICENSE  README.md  WORKSPACE  compile-to-linux  zig-wrapper
.github/workflows/: build_and_test.yml  release.yml
src/: BUILD.bazel  help.rs  lib.rs  main.rs  parser.rs  sanitizer.rs
tests/: BUILD.bazel  integration_tests.rs
