load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "lib",
    srcs = [
        "lib.rs",
        "parser.rs",
    ],
)

rust_test(
    name = "parser_tests",
    srcs = ["parser.rs"],
)

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [":lib"],
)
